force-app/main/default/objects/OW_audit_log__c/OW_audit_log__c.object-meta.xml
<CustomObject>
    <description>This generic object will be used to capture audit records. This can be used in production for genuine audit purposes and in lower environments as part of development.</description>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>AL-{0}</displayFormat>
        <label>Audit Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>