force-app/main/default/objects/OW_audit_log__c/fields/OW_additional_information__c.field-meta.xml
<CustomField>
    <fullName>OW_additional_information__c</fullName>
    <description>A catch all space for additional information.</description>
    <label>Additional information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>