force-app/main/default/objects/OW_audit_log__c/fields/OW_field_changed__c.field-meta.xml
<CustomField>
    <fullName>OW_field_changed__c</fullName>
    <description>The name of the field changed should be captured here.</description>
    <label>Field changed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>