force-app/main/default/objects/OW_audit_log__c/fields/OW_object_changed__c.field-meta.xml
<CustomField>
    <fullName>OW_object_changed__c</fullName>
    <description>The name of the object changed should be stored in this field.</description>
    <label>Object changed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>