force-app/main/default/objects/OW_audit_log__c/fields/OW_updated_value__c.field-meta.xml
<CustomField>
    <fullName>OW_updated_value__c</fullName>
    <description>The new value stored in the changed field should be captured here.</description>
    <label>Updated value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>