force-app/main/default/objects/OW_audit_log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OW_time_of_change__c</columns>
    <columns>OW_object_changed__c</columns>
    <columns>OW_field_changed__c</columns>
    <columns>OW_prior_value__c</columns>
    <columns>OW_updated_value__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>OW_record_id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>